--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <div class="tata">
-        <div class="tate">
-        <img src="images/qr.png" alt="qr-code">
+        <img src="images/image-qr-code - Copy.png" alt="qr-code">
         <div class="text">
         <h2>Improve your front-end skills by building projects</h2>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
-        </div>
     </div>
 </body>
 </html>
+
