--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon-32x32.png?v=2">  
     <title>QR SCANNER</title>
 </head>
@@ -13,7 +16,7 @@
         <img src="images/image-qr-code - Copy.png" alt="qr-code">
         <div class="text">
         <h2>Improve your front-end skills by building projects</h2>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <p id="txt">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
 </body>
