--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon-32x32.png?v=2">  
+    <link rel="icon" href="images/favicon.png">  
     <title>QR SCANNER</title>
-</head>
-<body>
+</header>
+<main>
     <div class="tata">
-        <img src="images/image-qr-code - Copy.png" alt="qr-code">
+        <img src="images/qrcode.png" alt="QR code to frontendmentor.io">
         <div class="text">
-        <h2>Improve your front-end skills by building projects</h2>
+        <h1>Improve your front-end skills by building projects</h1>
         <p id="txt">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
-</body>
+</main>
 </html>
