--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/favicon.png">  
+    <link rel="icon" href="images/favicon.png?v=2">  
     <title>QR SCANNER</title>
 </head>
 <main>
     <div class="tata">
-        <img src="images/qrcode.png" alt="QR code to frontendmentor.io">
+        <img src="images/qrcode.png" alt="QR-code-to-frontend">
         <div class="text">
         <h1>Improve your front-end skills by building projects</h1>
         <p id="txt">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
