--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <main>
     <div class="tata">
-        <img src="images/qrcode.png" alt="QR-code-to-frontend">
+        <img src="images/qrcode.png" alt="QR code to frontendmentor.io">
         <div class="text">
         <h1>Improve your front-end skills by building projects</h1>
         <p id="txt">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
